# [[ External Libraries ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/sqlite-amalgamation-3490200") # Want to know more about SQLite amalgamation? >> https://www.sqlite.org/amalgamation.html

# Add more external libraries as needed...

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ External Libraries ]]
